--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ pagination:
   enabled: true
 
 # Comments
-# disqus_shortname: friedroy # put your disqus shortname
+disqus_shortname: friedmanroy-github-io # put your disqus shortname
 # https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 # External sources.
